Fix channel selector line break on small screens

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -688,6 +688,7 @@ $actions-z-index: 2;
   display: inline-block;
   margin-bottom: 0;
   margin-top: -2px;
+  width: unset !important;
   .channel__selector--prefix {
     color: var(--color-text);
     margin-right: var(--spacing-xs);
